# echo-memory-weaver

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: server.py
app/chat_models/: base.py
app/embeddings/: base.py
app/prompts/notes/: sentiment.py  sentiments_evaluation.py  sentiments_parser.py  summarization.py
app/prompts/notes/sentiments/: analysis.py  evaluation.py  parser.py
app/tools/: light_rag.py  nano_graph_rag.py  text_ingestor.py
app/tools/sentiments_parser/: definition.py  models.py
app/vectorstores/nano_graphrag/: langchain.py
scripts/: graph_visual_with_html.py  troubleshoot.sh
