[tool.poetry]
name = "echo-memory-weaver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = ">=0.23.2"
langserve = {extras = ["server"], version = ">=0.3.0,<1.0.0"}
langchain-openai = "^0.2.3"
exceptiongroup = "^1.2.2"
langchain = "^0.3.4"
lightrag-hku = "^0.0.8"
aioboto3 = "^13.2.0"
ollama = "^0.3.3"
transformers = "^4.46.0"
torch = "^2.5.0"
nano-vectordb = "^0.0.4.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ruff = "^0.7.1"
pyvis = "^0.3.2"
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
